--- a/home/index.css
+++ b/home/index.css
@@ -2,48 +2,136 @@ html {
 	--blue: #b7ebff;
 	--black: #000;
 
+	--blue1: #1779c4;
+
 	--brand-primary: #000;
 	--brand-secondary: #b7ebff;
 
-	--primary: #fff;
-	--secondary: #000;
+	--primary: #000;
+	--secondary: #fff;
+	--background: #eee;
 }
 
 body.dark {
 	--brand-primary: #b7ebff;
-	--brand-secondary: #000;
+	--brand-secondary: #131516;
 
 	--primary: #c8c3bc;
 	--secondary: #131516;
+	--background: #000;
 }
 
 body {
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	width: 100%;
 	margin: 0;
-	background-color: var(--brand-secondary);
 	font-family: sans-serif;
-	height: 100vh;
 	overflow-x: hidden;
+	background-color: var(--brand-secondary);
+	color: var(--primary);
 }
 
-main {
-	position: absolute;
-	top: 0;
+h2 {
+	color: var(--brand-primary);
+	text-shadow: 2px 2px 0 var(--brand-secondary);
+	font-family: monospace;
+	font-size: 32px;
 }
 
-.reel0 {
-	z-index: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
+p {
+	font-size: 20px;
+	line-height: 1.3;
+}
+
+pre {
+	background-color: var(--background);
+	padding: 8px;
+}
+
+code {
+	font-size: 18px;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
 
 a {
+	color: var(--blue1);
+}
+
+md {
+	max-width: 800px;
+	height: auto;
+	display: block;
+	box-sizing: border-box;
+	background-color: var(--secondary);
+	padding-left: 20px;
+	padding-right: 20px;
+	/* border-radius: 16px; */
+}
+
+main {
+	position: fixed;
+	top: 0;
+	z-index: 0;
+}
+
+body>div {
+	z-index: 1;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
+	width: 100%;
+	background-color: var(--background);
+	padding: 16px;
+	gap: 16px;
+}
+
+#reel0 {
+	width: unset;
+	background-color: unset;
+	height: 100vh;
+}
+
+#reel1 {
+	margin-bottom: 50vh;
+	/* display: block; */
+}
+
+#reel2 {
+	margin-bottom: 40vh;
+}
+
+#reel3,
+#reel4,
+#reel5,
+#reel6,
+#reel7,
+#reel8,
+#reel9,
+#reel10 {
+	margin-bottom: 40vh;
+}
+
+#reel3 {
+	flex-flow: row wrap;
+}
+
+.minis.horiz {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: start;
+	gap: 16px;
+}
+
+a {
+	font-weight: bold;
 	text-decoration: none;
 }
 
@@ -76,7 +164,7 @@ a {
 	background-image: url('/assets/q5js_brand-light.webp');
 }
 
-.reel0 textarea {
+#reel0 textarea {
 	width: 100%;
 	background-color: var(--brand-primary);
 	color: var(--brand-secondary);
@@ -95,13 +183,34 @@ a {
 	white-space: nowrap;
 }
 
+#reel1 .mie {
+	min-width: 0;
+}
+
+#reel3>:first-child {
+	flex: 1;
+	width: 100%;
+}
+
+#reel3 img {
+	flex: 1;
+	min-width: 400px;
+	max-width: 400px;
+}
+
 @media screen and (max-width: 400px) {
 
 	.brand .img:first-child {
 		display: none;
 	}
 
-	.reel0 textarea {
+	#reel0 textarea {
 		font-size: 8px;
+	}
+}
+
+@media screen and (max-width: 384px) {
+	#reel1 .mie {
+		width: 240px !important;
 	}
 }
