--- a/learn/docs.css
+++ b/learn/docs.css
@@ -85,12 +85,6 @@ body {
 	color: var(--textColor);
 }
 
-h2 {
-	border-bottom: 1px solid var(--borderColor);
-	padding-bottom: 0.3em;
-	color: var(--textColor);
-}
-
 h1 {
 	font-size: 2em;
 }
@@ -118,7 +112,7 @@ h6 {
 p {
 	font-size: var(--font-large);
 	line-height: 1.5;
-	padding: 0 40px;
+	padding: 0 32px;
 	margin-bottom: 20px;
 }
 
@@ -133,13 +127,13 @@ a img {
 
 ul,
 ol {
-	margin: 20px 32px;
-	padding-left: 40px;
+	margin: 16px;
+	margin-right: 32px;
 }
 
 ul ul {
-	margin: 20px 0;
-	padding-left: 18px;
+	margin: 16px 0;
+	padding-left: 16px;
 }
 
 li {
@@ -167,7 +161,6 @@ code {
 pre {
 	background-color: var(--secondary);
 	padding: 8px 32px;
-	overflow: auto;
 }
 
 pre>code {
@@ -294,7 +287,6 @@ a {
 	margin: auto;
 	padding-left: 20px;
 	padding-right: 30px;
-	overflow-x: auto;
 }
 
 .search-filter-buttons button {
@@ -503,8 +495,8 @@ img:not(.logo) {
 	left: 58%;
 	transform: translateX(-50%);
 	z-index: 1112;
-	overflow: hidden;
 	max-height: 300px;
+	overflow-x: hidden;
 	overflow-y: auto;
 	border: 1px solid var(--borderColor);
 	border-top: none;
@@ -891,12 +883,6 @@ img:not(.logo) {
 	}
 }
 
-h1,
-h2 {
-	width: 100%;
-	border-bottom: none;
-}
-
 h1 {
 	padding: 20px 30px;
 	width: auto;
@@ -923,13 +909,14 @@ h1::before {
 
 h1,
 h2 {
-	background-color: var(--blue3);
 	display: flex;
 	align-items: center;
+	width: fit-content;
+	height: 36px;
 	padding: 0;
 	margin: 0;
-	height: 36px;
-	width: fit-content;
+	color: var(--textColor);
+	background-color: var(--blue3);
 	border-radius: 20px 2px;
 }
 
@@ -948,11 +935,7 @@ h2 .var {
 .emoji {
 	opacity: 0;
 	filter: hue-rotate(180deg);
-	padding: 0 12px;
-}
-
-.header-wrapper:hover h2 {
-	scale: 1.02;
+	padding: 0 8px;
 }
 
 .header-wrapper:hover .emoji {
@@ -963,11 +946,9 @@ h2 .var {
 	opacity: 1;
 }
 
-.heading-container .params,
-.heading-container .type {
-	font-size: 18px;
+.params,
+.type {
 	font-family: monospace;
-	font-weight: bold;
 }
 
 .params {
@@ -976,15 +957,24 @@ h2 .var {
 }
 
 .type {
-	/* color: #88d4b1; */
 	color: var(--blue3);
+	/* color: #88d4b1; */
+}
+
+.heading-container .params,
+.heading-container .type {
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.heading-container .type {
 	padding-left: 8px;
 }
 
 h3 {
 	padding-top: 8px;
 	font-size: 20px;
-	margin-left: 42px;
+	margin-left: 32px;
 }
 
 h4 {
@@ -993,6 +983,7 @@ h4 {
 
 .header-wrapper {
 	padding: 16px 0;
+	overflow-x: hidden;
 }
 
 .heading-container {
@@ -1003,6 +994,7 @@ h4 {
 	opacity: 1;
 	transition: opacity 0.2s ease-in-out;
 	position: relative;
+	text-overflow: ellipsis;
 }
 
 .h2-wrapper.sticky {
@@ -1224,7 +1216,7 @@ pre[class*="language-"] code {
 	}
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 999px) {
 	.allContent {
 		width: 800px;
 	}
@@ -1243,5 +1235,38 @@ pre[class*="language-"] code {
 
 	#navbar.active {
 		display: block;
+	}
+}
+
+@media (max-width: 500px) {
+	.heading-container .emoji {
+		display: none;
+	}
+
+	.heading-container h2 {
+		margin-left: 8px;
+	}
+
+	.editor-container {
+		margin: 16px 8px;
+	}
+
+	p {
+		padding: 0 16px;
+	}
+
+	h3 {
+		margin: 0 16px;
+	}
+
+	ul,
+	ol {
+		margin: 16px;
+		padding-left: 16px;
+	}
+
+	ul ul {
+		margin: 8px 0;
+		padding-left: 8px;
 	}
 }
