--- a/home/index.css
+++ b/home/index.css
@@ -38,17 +38,20 @@ body {
 	background-color: var(--brand-secondary);
 	color: var(--primary);
 	font-size: 20px;
+	font-family: 'adobe-heiti-std', monospace;
 }
 
 h2 {
 	color: var(--brand-primary);
 	text-shadow: 2px 2px 0 var(--brand-secondary);
-	font-family: monospace;
 	font-size: 32px;
+	margin-top: 8px;
+	margin-bottom: 0px;
 }
 
 p {
-	line-height: 1.3;
+	line-height: 1.5;
+	margin: 12px 0;
 }
 
 pre {
@@ -210,6 +213,7 @@ a {
 }
 
 #navLinks {
+	font-family: 'adobe-heiti-std', sans-serif;
 	box-sizing: border-box;
 	display: flex;
 	justify-content: center;
