--- a/home/index.css
+++ b/home/index.css
@@ -37,14 +37,14 @@ body {
 	font-family: sans-serif;
 	background-color: var(--brand-secondary);
 	color: var(--primary);
-	font-size: 20px;
+	font-size: 18px;
 	/* text-shadow: 0 0 16px rgb(255 255 255 / 25%); */
 }
 
 h2 {
 	color: var(--brand-primary);
 	text-shadow: 0 0 32px #b7ebff80;
-	font-size: 32px;
+	font-size: 28px;
 	margin-top: 8px;
 	margin-bottom: 0px;
 	font-family: 'adobe-heiti-std', monospace;
@@ -263,7 +263,7 @@ a {
 }
 
 #partners img {
-	width: 230px;
+	width: 220px;
 	border-radius: 16px;
 	border: 3px solid var(--blue);
 	transition: all 0.1s ease-in-out;
@@ -337,7 +337,7 @@ a {
 }
 
 .minis md {
-	max-width: 45vw;
+	max-width: 472px;
 }
 
 .btn {
