--- a/learn/docs.css
+++ b/learn/docs.css
@@ -398,6 +398,7 @@ header {
 }
 
 #searchResultsContainer {
+	display: none;
 	position: absolute;
 	top: 53px;
 	left: 36px;
@@ -410,7 +411,6 @@ header {
 	overflow-y: scroll;
 	font-size: 18px;
 	padding: 8px;
-	display: none;
 	scrollbar-width: thin;
 	scrollbar-color: var(--hover) var(--backGround);
 	gap: 8px;
@@ -431,7 +431,7 @@ header {
 	cursor: pointer;
 	background-color: var(--backGround);
 	white-space: nowrap;
-	overflow-x: hidden;
+	overflow: hidden;
 	transition: all 0.2s;
 	border-radius: 8px;
 }
@@ -1183,6 +1183,7 @@ pre[class*="language-"] code {
 	#searchResultsContainer {
 		position: fixed;
 		width: 100vw;
+		top: 60px;
 		left: 0;
 	}
 }
