--- a/home/index.css
+++ b/home/index.css
@@ -92,8 +92,13 @@ ul {
 }
 
 main {
+	z-index: 0;
+}
+
+#q5Canvas0 {
 	position: fixed;
 	top: 0;
+	left: 0;
 	z-index: 0;
 }
 
@@ -235,8 +240,7 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 16px;
-	padding: 16px;
+	padding: 8px;
 	background-color: var(--brand-primary);
 	border-radius: 16px;
 	height: 48px;
@@ -245,6 +249,7 @@ a {
 
 #navLinks a {
 	font-size: 22px;
+	padding: 8px;
 	color: var(--brand-secondary);
 }
 
@@ -486,5 +491,13 @@ footer {
 @media screen and (max-width: 320px) {
 	#reel0 textarea {
 		font-size: 9px;
+	}
+}
+
+@media (pointer: coarse) {
+
+	main,
+	#q5Canvas0 {
+		pointer-events: none !important;
 	}
 }
